refactor: partial enum classes